force-app/main/default/objects/Opportunity/fields/Commande__c.field-meta.xml
<CustomField>
    <fullName>Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>