force-app/main/default/objects/Opportunity/fields/Contact_terre_de_soleil__c.field-meta.xml
<CustomField>
    <fullName>Contact_terre_de_soleil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact terre de soleil</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>