force-app/main/default/objects/Opportunity/fields/Nom_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités (Nom du contact)</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>