force-app/main/default/objects/Opportunity/fields/R1__c.field-meta.xml
<CustomField>
    <fullName>R1__c</fullName>
    <formula>IF(ISPICKVAL( StageName ,&apos;R1&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>