force-app/main/default/objects/Opportunity/fields/R2__c.field-meta.xml
<CustomField>
    <fullName>R2__c</fullName>
    <formula>IF( ISPICKVAL(  StageName , &apos;R2&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>