force-app/main/default/objects/Opportunity/listViews/Mes_opportunites.listView-meta.xml
<ListView>
    <fullName>Mes_opportunites</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <label>Mes opportunités</label>
</ListView>